# im_pre-preocessing

./: README.md  app.py
imp3/: pyproject.toml
imp3/imp3/: processors.py
pre-processors/: map_color_space.py
pre_processors/: map_color_space.py  read_im.py
